# mstream

./: .gitignore  CMakeLists.txt  README.md
conf/: mstream.conf
include/: common.h  decoder.h  encoder.h  ffmpeg_afx.h
src/: common.cpp  decoder.cpp  encoder.cpp  stream.cpp
